--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "json-server --watch db.json 3001"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "json-server": "^0.17.0",
     "mongoose": "^6.4.6"
   },
   "devDependencies": {
